1999-04-25  Alex Lancaster  <alex@santafe.edu>

	* Discrete2d.m ([Discrete2d -lispInCreate:], [Discrete2d
	-lispIn:]): Custom input Lisp parsing routines for Discrete2d
	lattices for create-time and use-time, respectively.
	([Discrete2d -lispOutShallow:], [Discrete2d -lispOutDeep:]):
	Custom output Lisp for lattices.  Don't allow shallow
	serialization.
	([Discrete2d -_lispOutAttr_:anObject:atX:Y:], [Discrete2d
	-_lispInAttr_:]): Local customization for reading and writing
	objects into lattice.
	([Discrete2d -_lispInAttrAsValues_:], [Discrete2d
	-_lispInAttrAsObjects_:]): Internal parsing methods.

	* space.h: ([Discrete2d -setUseObjects], [Discrete2d
	-setUseValues]):  Add to SETTING phase.

	* Discrete2d.[hm] ([Discrete2d -setUseObjects], [Discrete2d
	-setUseValues]): New methods to set the kind of serialization
	required for instance (only required in cases when it cannot be
	inferred from the archiver).  Add respective BOOL instance
	variables.
	
1999-04-22  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Ca2d.[hm], ConwayLife2d.[hm], DblBuffer2d.[hm], Diffuse2d.[hm],
	Grid2d.[hm], Int2dFiler.h, Object2dDisplay.h, Value2dDisplay.h:
	Add protocol compliance tags to the @interfaces, reorganizing
	the phase tags as necessary.

1999-03-19  Alex Lancaster  <alex@santafe.edu>

	* DblBuffer2d.m ([DblBuffer -drop]): Add method.  Free extra
	memory used by the `newLattice' pointer, like Discrete2d.

1999-03-14  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (INCLUDES): Add -I for libobjc.

1999-03-14  Alex Lancaster  <alex@santafe.edu>

	* Discrete2d.m ([Discrete2d -drop]): Add method.  Call [Zone
	-free:] using the current Zone, on the lattice instance, before
	calling drop on `super', to deallocate memory used by the lattice.

1999-03-10  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Diffuse2d.m: Remove const unsigned maxStates and replace with
	macro.

1999-02-26  Alex Lancaster  <alex@santafe.edu>
