@@ -1,3 +1,7 @@
+1999-04-26  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
+
+	* Discrete2d.m ([Discrete -lispOutDeep:]): Remove strdup of buf.
+
 1999-04-25  Alex Lancaster  <alex@santafe.edu>
 
 	* Discrete2d.m ([Discrete2d -lispInCreate:], [Discrete2d
